--- a/Project/Windows/Dorothy/Dorothy.vcxproj
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj
@@ -40,6 +40,7 @@
     <ClCompile Include="..\..\..\Source\Lua\LuaBinding.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaCode.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaEngine.cpp" />
+    <ClCompile Include="..\..\..\Source\Lua\LuaHandler.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaHelper.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaManual.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\ToLua\tolua_event.cpp" />
@@ -89,6 +90,7 @@
     <ClInclude Include="..\..\..\Source\Event\Listener.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaBinding.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaEngine.h" />
+    <ClInclude Include="..\..\..\Source\Lua\LuaHandler.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaHelper.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaManual.h" />
     <ClInclude Include="..\..\..\Source\Lua\ToLua\tolua++.h" />
