--- a/Project/Windows/Dorothy/Dorothy.vcxproj
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj
@@ -33,6 +33,7 @@
     <ClCompile Include="..\..\..\Source\Basic\Scheduler.cpp" />
     <ClCompile Include="..\..\..\Source\Common\Async.cpp" />
     <ClCompile Include="..\..\..\Source\Common\Debug.cpp" />
+    <ClCompile Include="..\..\..\Source\Common\Utils.cpp" />
     <ClCompile Include="..\..\..\Source\Event\Event.cpp" />
     <ClCompile Include="..\..\..\Source\Event\EventQueue.cpp" />
     <ClCompile Include="..\..\..\Source\Event\EventType.cpp" />
@@ -41,7 +42,6 @@
     <ClCompile Include="..\..\..\Source\Lua\LuaCode.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaEngine.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaHandler.cpp" />
-    <ClCompile Include="..\..\..\Source\Lua\LuaHelper.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaManual.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\ToLua\tolua_event.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\ToLua\tolua_fix.cpp" />
@@ -50,6 +50,9 @@
     <ClCompile Include="..\..\..\Source\Lua\ToLua\tolua_push.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\ToLua\tolua_to.cpp" />
     <ClCompile Include="..\..\..\Source\Node\Node.cpp" />
+    <ClCompile Include="..\..\..\Source\Support\Array.cpp" />
+    <ClCompile Include="..\..\..\Source\Support\Color.cpp" />
+    <ClCompile Include="..\..\..\Source\Support\Geometry.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\Source\3rdParty\FileSystem\mkdir.h" />
@@ -76,12 +79,9 @@
     <ClInclude Include="..\..\..\Source\Common\Debug.h" />
     <ClInclude Include="..\..\..\Source\Common\MemoryPool.h" />
     <ClInclude Include="..\..\..\Source\Common\Own.h" />
-    <ClInclude Include="..\..\..\Source\Common\OwnVector.h" />
     <ClInclude Include="..\..\..\Source\Common\Ref.h" />
-    <ClInclude Include="..\..\..\Source\Common\RefVector.h" />
     <ClInclude Include="..\..\..\Source\Common\Utils.h" />
     <ClInclude Include="..\..\..\Source\Common\WRef.h" />
-    <ClInclude Include="..\..\..\Source\Common\WRefVector.h" />
     <ClInclude Include="..\..\..\Source\Const\Define.h" />
     <ClInclude Include="..\..\..\Source\Const\Header.h" />
     <ClInclude Include="..\..\..\Source\Event\Event.h" />
@@ -91,12 +91,14 @@
     <ClInclude Include="..\..\..\Source\Lua\LuaBinding.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaEngine.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaHandler.h" />
-    <ClInclude Include="..\..\..\Source\Lua\LuaHelper.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaManual.h" />
     <ClInclude Include="..\..\..\Source\Lua\ToLua\tolua++.h" />
     <ClInclude Include="..\..\..\Source\Lua\ToLua\tolua_event.h" />
     <ClInclude Include="..\..\..\Source\Lua\ToLua\tolua_fix.h" />
     <ClInclude Include="..\..\..\Source\Node\Node.h" />
+    <ClInclude Include="..\..\..\Source\Support\Array.h" />
+    <ClInclude Include="..\..\..\Source\Support\Color.h" />
+    <ClInclude Include="..\..\..\Source\Support\Geometry.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{340C4AB9-29B3-4591-B8AA-CF532ADE77AA}</ProjectGuid>
