fix android build

--- a/Project/Android/app/CMakeLists.txt
+++ b/Project/Android/app/CMakeLists.txt
@@ -9,6 +9,7 @@ include_directories(
 	src/main/cpp/3rdParty/BGFX/Header
 	src/main/cpp/3rdParty/Lua/Header
 	src/main/cpp/3rdParty/Zip/Header
+	src/main/cpp/3rdParty/lodepng
 )
 
 add_library( SDL2-lib SHARED IMPORTED )
@@ -23,6 +24,12 @@ set_target_properties(
 	${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/3rdParty/BGFX/Lib/Android/${ANDROID_ABI}/libbgfx.a
 )
 
+add_library( BX-lib STATIC IMPORTED )
+set_target_properties(
+	BX-lib PROPERTIES IMPORTED_LOCATION
+	${CMAKE_CURRENT_SOURCE_DIR}/src/main/cpp/3rdParty/BGFX/Lib/Android/${ANDROID_ABI}/libbx.a
+)
+
 add_library( luajit-lib STATIC IMPORTED )
 set_target_properties(
 	luajit-lib PROPERTIES IMPORTED_LOCATION
@@ -31,4 +38,4 @@ set_target_properties(
 
 add_library( main SHARED ${src-files} )
 
-target_link_libraries( main android log EGL z GLESv1_CM GLESv2 SDL2-lib BGFX-lib luajit-lib )
+target_link_libraries( main android log EGL z GLESv1_CM GLESv2 SDL2-lib BGFX-lib BX-lib luajit-lib )
