--- a/Project/Android/app/build.gradle
+++ b/Project/Android/app/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 
 android {
-	compileSdkVersion 24
-	buildToolsVersion '25.0.0'
+	compileSdkVersion 25
+	buildToolsVersion "25.0.2"
 	defaultConfig {
 		applicationId "com.luvfight.dorothy"
 		minSdkVersion 14
-		targetSdkVersion 24
+		targetSdkVersion 25
 		versionCode 1
 		versionName "1.0"
 		testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -41,6 +41,6 @@ dependencies {
 	androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
-	compile 'com.android.support:appcompat-v7:24.2.1'
+	compile 'com.android.support:appcompat-v7:25.1.0'
 	testCompile 'junit:junit:4.12'
 }
