adding touch dispatcher, sprite auto batch function added.

--- a/Project/Windows/Dorothy/Dorothy.vcxproj
+++ b/Project/Windows/Dorothy/Dorothy.vcxproj
@@ -43,6 +43,7 @@
     <ClCompile Include="..\..\..\Source\Event\EventQueue.cpp" />
     <ClCompile Include="..\..\..\Source\Event\EventType.cpp" />
     <ClCompile Include="..\..\..\Source\Event\Listener.cpp" />
+    <ClCompile Include="..\..\..\Source\Input\TouchDispather.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaBinding.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaCode.cpp" />
     <ClCompile Include="..\..\..\Source\Lua\LuaEngine.cpp" />
@@ -100,6 +101,7 @@
     <ClInclude Include="..\..\..\Source\Event\EventQueue.h" />
     <ClInclude Include="..\..\..\Source\Event\EventType.h" />
     <ClInclude Include="..\..\..\Source\Event\Listener.h" />
+    <ClInclude Include="..\..\..\Source\Input\TouchDispather.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaBinding.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaEngine.h" />
     <ClInclude Include="..\..\..\Source\Lua\LuaHandler.h" />
